# pencil2d

./: .gitignore  .travis.yml  BUG2_ACTUAL_SCENARIO.md  BUG2_FIX_SUMMARY.md  BUG2_REPRODUCTION_STEPS.md  BUG3_FIX_SUMMARY.md  CLAUDE.md  CMAKE_BUILD.md  CMAKE_IMPLEMENTATION.md  CMakeLists.txt  FRAME_DATA_LOSS_BUGS.md  appveyor-linux.yml  appveyor-mac.yml  appveyor.yml  build-cmake.bat  build-cmake.sh  build-win.bat  common.pri  pencil2d.pro  pr-1976-review.md  pr-1983-review.md  pr-1989-review.md  pr-1997-review.md  review-1997.md  run-bug3-tests.bat
.claude/: settings.local.json
.claude/skills/update-translations/: SKILL.md
.github/actions/create-package/: create-package.sh
.github/actions/install-dependencies/: action.yml  install-dependencies.sh
.github/actions/notarize-macos-app/: README.md  action.yml
.github/workflows/: ci.yml
3rdlib/paint_lib/: paint_lib.pro
3rdlib/paint_lib/json-c/: json-c.pro
3rdlib/paint_lib/libmypaint/: aclocal.m4  appveyor.sh  appveyor.yml  ar-lib  autogen.sh  brushsettings-gen.h  brushsettings.json  config.h  config.h.in  config.status  configure  fifo.c  libmypaint.pc  libtool  mypaint-brush-settings-gen.h  mypaint-brush-settings.c  mypaint-brush.c  mypaint-brush.h  mypaint-fixed-tiled-surface.c  mypaint-mapping.c  mypaint-mapping.h  mypaint-rectangle.c  mypaint-surface.c  mypaint-surface.h  mypaint-tiled-surface.c  mypaint-tiled-surface.h  mypaint.c  operationqueue.c  operationqueue.h  rng-double.c  tiled-surface-private.h  tilemap.c  utils.c
3rdlib/paint_lib/libmypaint/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
3rdlib/paint_lib/libmypaint/gegl/: libmypaint-gegl.pc
3rdlib/paint_lib/libmypaint/m4macros/: intltool.m4
3rdlib/paint_lib/libmypaint/po/: ar.gmo  ca.gmo  cs.gmo  da.gmo  de.gmo  en_CA.gmo  en_GB.gmo  es.gmo  es.po  es_ES.gmo  fa.gmo  fi.gmo  fr.gmo  he.gmo  hu.gmo  id.gmo  it.gmo  ja.gmo  ko.gmo  nb.gmo  nn_NO.gmo  pl.gmo  pt_BR.gmo  ro.gmo  ru.gmo  sc.gmo  sk.gmo  sl.gmo  sv.gmo  tr.gmo  uk.gmo  zh_CN.gmo  zh_TW.gmo
3rdlib/paint_lib/qtmypaint/: mpbrush.cpp  mpbrush.h  mphandler.cpp  mphandler.h  mpsurface.cpp  mpsurface.h  mptile.cpp  mptile.h
3rdlib/qtmypaint/: qtmypaint.pro
3rdlib/qtmypaint/libmypaint/: libmypaint.pro
3rdlib/qtmypaint/libmypaint/libmypaint2-alpha/: brushmodes.h  config.h
3rdlib/qtmypaint/src/: mpbrush.h  mphandler.cpp  mphandler.h  mpsurface.cpp  mpsurface.h  mptile.cpp  mptile.h  src.pro
app/: app.cmake  app.pri  app.pro  brushsettingitem.h  brushsettingwidget.cpp  brushsettingwidget.h  mpbrushutils.h  sources.cmake
app/data/: Info.plist  app.qrc  brushes.qrc  pencil2d.desktop
app/data/brushes/: brushes.conf  order.conf
app/data/brushes/deevad/: brush_test.myb
app/src/: aboutdialog.cpp  actioncommands.cpp  addtransparencytopaperdialog.cpp  app_util.h  brushsettingitem.cpp  brushsettingitem.h  bucketoptionswidget.cpp  bucketoptionswidget.h  cameraoptionswidget.cpp  combobox.cpp  combobox.h  commandlineparser.cpp  crashhandler.cpp  crashhandler.h  main.cpp  mainwindow2.cpp  mainwindow2.h  mpbrushconfigurator.cpp  mpbrushconfigurator.h  mpbrushinfodialog.cpp  mpbrushinfodialog.h  mpbrushpresetswidget.cpp  mpbrushpresetswidget.h  mpbrushselector.cpp  mpbrushselector.h  mpbrushutils.h  pencil2d.cpp  preferencesdialog.cpp  shortcutspage.cpp  spinslider.cpp  spinslider.h  strokeoptionswidget.cpp  toolboxwidget.cpp
app/src/mapping/: mappingconfiguratorwidget.cpp  mappingconfiguratorwidget.h  mappingdistributionwidget.cpp  mappingdistributionwidget.h  mpmappingoptionswidget.cpp  mpmappingoptionswidget.h  mpmappingwidget.cpp  mpmappingwidget.h
app/ui/: mpbrushpresetswidget.ui
core_lib/: core_lib.cmake  core_lib.pri  core_lib.pro
core_lib/src/: backgroundworker.cpp  canvaspainter.cpp  canvaspainter.h  corelib-pch.h  miniz.cpp  transformpainter.cpp  transformpainter.h
core_lib/src/graphics/: buffercanvas.cpp  buffercanvas.h  surface.h
core_lib/src/interface/: editor.cpp  editor.h  scribblearea.cpp  scribblearea.h  timelinecells.cpp  undoredocommand.cpp  undoredocommand.h
core_lib/src/managers/: layermanager.cpp  layermanager.h  preferencemanager.cpp  preferencemanager.h  selectionmanager.cpp  selectionmanager.h  toolmanager.cpp  toolmanager.h  undoredomanager.cpp  undoredomanager.h  viewmanager.cpp  viewmanager.h
core_lib/src/structure/: filemanager.cpp  filemanager.h  keyframe.h  layer.cpp  layer.h  layerbitmap.cpp  layerbitmap.h  layerbitmapsurface.cpp  layerbitmapsurface.h  layercamera.h  layersound.h  layervector.cpp  layervector.h  object.cpp  object.h  objectdata.h  projectstoragebackend.h  projectstoragebackendsqlite.cpp  projectstoragebackendsqlite.h
core_lib/src/tool/: basetool.cpp  basetool.h  brushtool.cpp  brushtool.h  buckettool.cpp  buckettool.h  cameratool.cpp  cameratool.h  erasertool.cpp  erasertool.h  eyedroppertool.cpp  eyedroppertool.h  movetool.cpp  movetool.h  penciltool.cpp  pentool.cpp  polylinetool.cpp  polylinetool.h  selecttool.cpp  selecttool.h  smudgetool.cpp  smudgetool.h  stroketool.cpp  stroketool.h  toolsettings.h  transformproxytool.cpp  transformproxytool.h  transformtool.cpp  transformtool.h
core_lib/src/util/: BrushSetting.h  autosaverbytime.h  commandregistry.cpp  commandregistry.h  fileformat.h  mathutils.h  pencildef.h  pencilerror.h  pencilsettings.cpp  util.cpp  util.h
docs/: crash-reporter-setup.md  pr-review-discoveries-undo-redo-merged.md  pr-shortcut-refactor.md  shortcut.md  sqlite-project-plan.md  test-analysis.md  test-coverage.md  undo-redo-audit.md  undo-redo.md
tests/: BUG2_TEST_README.md  QUICK_START.md  run_bug2_tests.ps1  sources.cmake  tests.cmake  tests.pro
tests/src/: main.cpp  test_bitmapimage.cpp  test_commandregistry.cpp  test_editor.cpp  test_filemanager.cpp  test_layerbitmap.cpp  test_object.cpp  test_preferencemanager.cpp  test_toolsettings.cpp  test_undoredocommand.cpp  test_undoredomanager.cpp  test_util.cpp
util/: appveyor-mac.yml  appveyor-mingw.yml  appveyor-msvc.yml  common.pri  fileuploader.py  sentry.pri  win-deploy.ps1
(+14 files in other folders)
